# sphinx-argparse-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini  tox.toml  whitelist.txt
.github/: FUNDING.yaml  SECURITY.md
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
roots/test-actions/: parser.py
roots/test-bad-func/: index.rst  parser.py
roots/test-bad-module/: index.rst
roots/test-basic/: parser.py
roots/test-choices/: parser.py
roots/test-complex/: index.rst  parser.py
roots/test-default-handling/: index.rst  parser.py
roots/test-description-empty/: index.rst
roots/test-description-multiline/: parser.py
roots/test-description-set/: index.rst  parser.py
roots/test-epilog-empty/: index.rst  parser.py
roots/test-epilog-multiline/: parser.py
roots/test-epilog-multiline-subclass/: parser.py
roots/test-epilog-set/: index.rst
roots/test-force-refs-lower/: index.rst  parser.py
roots/test-group-title-empty-prefixes/: index.rst
roots/test-group-title-prefix-custom/: index.rst  parser.py
roots/test-group-title-prefix-custom-subcommands/: index.rst
roots/test-group-title-prefix-default/: index.rst
roots/test-group-title-prefix-empty/: index.rst
roots/test-group-title-prefix-empty-subcommands/: index.rst
roots/test-group-title-prefix-prog-replacement/: index.rst  parser.py
roots/test-group-title-prefix-subcommand-replacement/: index.rst
roots/test-hook/: index.rst  parser.py
roots/test-hook-fail/: parser.py
roots/test-lower-upper-refs/: parser.py
roots/test-multiword-prog/: parser.py
roots/test-nargs/: parser.py
roots/test-nested/: index.rst  parser.py
roots/test-noincludetitle/: index.rst  parser.py
roots/test-prog/: index.rst  parser.py
roots/test-prog-subcommands/: index.rst  parser.py
roots/test-ref/: index.rst
roots/test-ref-duplicate-label/: index.rst  parser.py
roots/test-ref-prefix-doc/: conf.py  index.rst
roots/test-smartquotes/: conf.py  index.rst  parser.py
roots/test-store-true-false/: parser.py
roots/test-subparsers/: parser.py
roots/test-suppressed-action/: parser.py
roots/test-title-empty/: index.rst
roots/test-title-empty-groups/: cli.rst  index.rst  parser.py
roots/test-title-set/: index.rst  parser.py
roots/test-tuple-metavar/: parser.py
src/sphinx_argparse_cli/: __init__.py  _logic.py
tests/: complex.txt  complex_pre_310.txt  conftest.py  test_logic.py  test_sphinx_argparse_cli.py
