[metadata]
name = sphinx_argparse_cli
description = render CLI arguments (sub-commands friendly) defined by argparse module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/sphinx-argparse-cli
author = Bernat Gabor
author_email = gaborjbernat@gmail.com
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
keywords = sphinx, argparse
project_urls =
    Source=https://github.com/tox-dev/sphinx-argparse-cli
    Tracker=https://github.com/tox-dev/sphinx-argparse-cli/issues
    Documentation=https://github.com/tox-dev/sphinx-argparse-cli/blob/main/README.md

[options]
packages = find:
install_requires =
    sphinx>=5.3
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.2
    pytest-cov>=4

[options.package_data]
sphinx_argparse_cli = py.typed

[coverage:report]
show_missing = True
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$

[coverage:paths]
source =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src

[coverage:run]
branch = true
parallel = true
source =
    ${_COVERAGE_SRC}

[coverage:html]
show_contexts = true
skip_covered = false
skip_empty = true
